<resources>
    <string name="app_name">礼物说</string>
    <string name="security_code">使用验证码登陆</string>
    <string name="password">使用密码登陆</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="category">分类</string>
    <string name="select">热门</string>
    <string name="home">指南</string>
    <string name="hot">热门</string>
    <string name="profile">我的</string>
    <string name="conment">评论</string>
    <string name="i_talk_too">我也说几句</string>
    <string name="send">发送</string>
    <string name="hot_conment">热门评论</string>
    <string name="baby_detail">宝贝详情</string>
    <string name="liwushuo">礼物说</string>
    <string name="search">搜索礼物、攻略</string>
    <string name="searchh">搜索</string>
    <string name="two_minis_jump">2s跳转</string>
    <string name="category_guide">选礼神器</string>
    <string name="topic">专题</string>
    <string name="look_all">查看全部</string>
    <string name="change_tv">切换频道</string>
    <string name="unregister">未登录</string>
    <string name="cart">购物车</string>
    <string name="order">订单</string>
    <string name="coupon">礼券</string>
    <string name="service">客服</string>
    <string name="like_gift_here">喜欢的礼物摆在这里哦</string>
    <string name="all_people_search">大家都在搜</string>
    <string name="use_guide">使用选礼神器快速挑选礼物</string>
    <string name="none_gift">没有找到相关礼物</string>
    <string name="default_">默认排序</string>
    <string name="hot_">按热度排序</string>
    <string name="price_low_to_high">价格由低到高</string>
    <string name="price_high_to_low">价格由高到低</string>
    <string name="hot_category">热门分类</string>
    <string name="gexing">个性配饰</string>
    <string name="share">分享到</string>
    <string name="wechat_time">微信朋友圈</string>
    <string name="wechat">微信好友</string>
    <string name="cancle">取消</string>
    <string name="hyperlink">复制链接</string>
    <string name="aa_tencent">QQ好友</string>
    <string name="qzone">QQ空间</string>
    <string name="sina">新浪微博</string>
    <string name="write_conment">写评论</string>
    <string name="teleNum">输入手机号</string>
    <string name="password_">密码</string>
    <string name="regis_another">使用社交账号登陆</string>
    <string name="register_new">注册新用户</string>
    <string name="login">登录</string>
    <string name="get_password">获取验证码</string>


</resources>
