<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:gravity="center"
        android:text="@string/share"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/twenty_sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_hundred_dp"
        android:layout_marginTop="@dimen/five_dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_home_share_popup_wechat_timeline_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/selector_wechat_timeline"
            android:gravity="center"
            android:paddingTop="@dimen/ten_dp"
            android:text="@string/wechat_time"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/item_home_share_popup_wechat_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/selector_wechat"
            android:gravity="center"
            android:paddingTop="@dimen/ten_dp"
            android:text="@string/wechat"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/item_home_share_popup_sina_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/selector_qq_sina"
            android:gravity="center"
            android:paddingTop="@dimen/ten_dp"
            android:text="@string/sina"
            android:textColor="@color/colorBlack" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_hundred_dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_home_share_popup_tencent_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/selector_qq_qzone"
            android:gravity="center"
            android:paddingTop="@dimen/ten_dp"
            android:text="@string/qzone"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/item_home_share_popup_tencent_qq_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/selector_qq_tencent"
            android:gravity="center"
            android:paddingTop="@dimen/ten_dp"
            android:text="@string/aa_tencent"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/item_home_share_popup_hyperlink_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/selector_hyperlink"
            android:gravity="center"
            android:paddingTop="@dimen/ten_dp"
            android:text="@string/hyperlink"
            android:textColor="@color/colorBlack" />
    </LinearLayout>

    <TextView
        android:layout_width="@dimen/thirty_hundred_sixty_dp"
        android:layout_height="@dimen/one_dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/ten_dp"
        android:background="@color/colcorRadioButtonLightgrey" />

    <TextView
        android:id="@+id/item_home_share_popup_cancel_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_dp"
        android:layout_marginBottom="@dimen/five_dp"
        android:layout_marginTop="@dimen/five_dp"
        android:gravity="center"
        android:text="@string/cancle"
        android:textSize="@dimen/twenty_five_sp" />
</LinearLayout>