<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_dp"
        android:background="@color/colorRadioButtonDeepPink">

        <ImageView
            android:id="@+id/home_conment_back_img"
            android:layout_width="@dimen/twenty_two_dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twelve_dp"
            android:layout_marginTop="@dimen/eight_dp"
            android:src="@mipmap/ic_action_back" />

        <TextView
            android:id="@+id/home_conment_bar_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="@dimen/one_hundred_seventy_dp"
            android:text="@string/conment"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/twenty_sp" />

    </RelativeLayout>

    <ListView
        android:id="@+id/home_conment_down_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:divider="@null" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:background="@color/colcorRadioButtonDeepgrey" />

    <LinearLayout
        android:id="@+id/home_conment_write_conment_rlayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/thirty_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_weight="1"
            android:background="@drawable/round_white_deepgrey"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/five_dp"
            android:text="@string/i_talk_too" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/forty_dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/fifteen_dp"
            android:layout_marginRight="@dimen/fifteen_dp"
            android:gravity="center_vertical"
            android:text="@string/send"
            android:textSize="@dimen/eighteen_sp" />

    </LinearLayout>
</LinearLayout>