<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/one_hundred_fifty_dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dropdown"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/sort_default_rlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp"
            android:text="@string/default_"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/fifteen_sp" />

        <ImageView
            android:id="@+id/sort_default_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_dropdown_check" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_point_five_dp"
        android:background="@color/colorWhite" />

    <RelativeLayout
        android:id="@+id/sort_hot_rlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp"
            android:text="@string/hot_"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/fifteen_sp" />

        <ImageView
            android:id="@+id/sort_hot_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_dropdown_check" />
    </RelativeLayout>

    <TextView
        android:id="@+id/sort_hot_line_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_point_five_dp"
        android:background="@color/colorWhite" />

    <RelativeLayout
        android:id="@+id/sort_price_high_to_low_rlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp"
            android:text="@string/price_low_to_high"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/fifteen_sp" />

        <ImageView
            android:id="@+id/sort_price_high_to_low_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_dropdown_check" />
    </RelativeLayout>

    <TextView
        android:id="@+id/sort_price_low_to_high_line_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_point_five_dp"
        android:background="@color/colorWhite" />

    <RelativeLayout
        android:id="@+id/sort_price_low_to_high_rlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/five_dp"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:text="@string/price_high_to_low"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/fifteen_sp" />

        <ImageView
            android:id="@+id/sort_price_low_to_high_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_dropdown_check" />
    </RelativeLayout>


</LinearLayout>